General Refactoring and Cleanup of Code