@@ -1,12 +1,11 @@
 package org.group7.model;
 
-import java.awt.*;
-import java.util.ArrayList;
+import java.awt.Color;
 import java.util.List;
 
 public class Player{
-    private List<Piece> pieces;
-    private Color color;
+    private List<Piece> pieces; //TODO tas bort, ifrågasätt Player-klasses existens?
+    private final Color color;
 
     public Player(Color color){
         this.color = color;
@@ -18,11 +17,10 @@ public class Player{
 
     public List<Piece> getPieces(){
         return this.pieces;
-    }
+    } //TODO onödig
 
     public Piece choosePiece(){ //väljer automatiskt piece 0,
-        return pieces.get(0);
-    }
-    //public void removePiece(Piece p);
+        return pieces.getFirst();
+    } //TODO onödig
 
 }
